Compila-Bob/Compilabob.java
/* Generated By:JavaCC: Do not edit this line. Compilabob.java */
import java.io.*;
import java.util.ArrayList;
import java.io.PrintWriter;


public class Compilabob implements CompilabobConstants {

        String errormsg="";
        int sentencias_inco =0;
        //variebales para semantica-------------------------------
        Token var,opVar;
        boolean lectura = false;
        public static FileWriter  fichero = null;
    public static PrintWriter pw = null;
        public static String call = "cmd /k start C:/Users/selen/Escritorio/CompilaBob2.0/Compila-Bob/consola.bat";
    //--------------------------------------------------------
        public static void main(String args[])  {

                /* CODIGO INTERMEDIO 
		String fileName = "intermedio.txt";
    	String encoding = "UTF-8";
		CodigoIntermedio.writer = new PrintWriter(fileName, encoding);
		*/
                Compilabob compilador = new Compilabob(System.in);
                try {
                        fichero = new FileWriter ("cCode.cpp");
                        pw = new PrintWriter(fichero);
                        pw.println("#include <iostream>");
                        pw.println("#include <stdlib.h>");
                        pw.println("using namespace std;");
                        compilador.Codigo();
                }
                catch( Exception e ){
                        System.out.println("\nEXCEPTION e MAIN\n" +"Sentencias incorrectas encontradas: "+compilador.sentencias_inco);
                        e.printStackTrace();
                }
                catch( TokenMgrError e ) {
                        System.out.println( "Error de Token" );
                }
                finally
                {
                        try {
                                // Aprovechamos el finally para 
                                // asegurarnos que se cierra el fichero.
                                        if (null != fichero)
                                                fichero.close();
                        } catch (Exception e2) {
                                   e2.printStackTrace();
                                }
                }
                if(compilador.errormsg == "" && compilador.sentencias_inco == 0){
                        System.out.println("Compilador ejecutado con "+"\u00e9"+"xito");
                        try {
                                Runtime.getRuntime().exec(call);
                        } catch (java.io.IOException e) {
                                e.getMessage();
                        }

                }else{
                        System.out.println(compilador.errormsg);
                }
                System.out.println("Sentencias incorrectas encontradas: "+compilador.sentencias_inco);

        }

//------------------------------- ANÁLISIS SINTACTICO - AREA DE GRAMATICAS ----------------------------------------------------

// Gramatica inicial que contiene el cuerpo basico del codigo
  final public void Codigo() throws ParseException {
        ClaseSemantica.SetTables();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INICIO:
      jj_consume_token(INICIO);
                   Compilabob.pw.println("int main()");
      break;
    default:
      jj_la1[0] = jj_gen;
      ErrorNoinicio();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SepIzq:
      jj_consume_token(SepIzq);
                                                                                    Compilabob.pw.println("{ ");
      break;
    default:
      jj_la1[1] = jj_gen;
      ErrorNoSepINICIO();
    }
    Cuerpo();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SepDer:
      jj_consume_token(SepDer);
                   Compilabob.pw.println("}");
      break;
    default:
      jj_la1[2] = jj_gen;
      ErrorNoSepFINAL();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FIN:
      jj_consume_token(FIN);
      break;
    default:
      jj_la1[3] = jj_gen;
      ErrorNOFIN();
    }
    jj_consume_token(0);
  }

// método cuerpo, lee un conjunto de sentencias tamaño n
  final public void Cuerpo() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case CicloIterado:
      case CicloLimit:
      case ESCRIBIR:
      case PuntoComa:
      case ENTERO:
      case FLOTANTE:
      case ID_CADENA:
      case BOOLEANO:
      case IDENTIFICADOR:
      case UNKNOW:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_1;
      }
      sentencias();
    }
  }

// metodo sentencias, lee todas las gramaticas que pueden ser reconocidas por el compilador
  final public void sentencias() throws ParseException {
    try {
      if (jj_2_1(2)) {
        Declaracion();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFICADOR:
          Asignacion();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PuntoComa:
            jj_consume_token(PuntoComa);
                             Compilabob.pw.println(";\n");
            break;
          default:
            jj_la1[5] = jj_gen;
            errorFinlinea();
          }
          break;
        case CicloIterado:
          Ciclo_RepitoHastaQue();
          break;
        case CicloLimit:
          Ciclo_RepitoMientras();
          break;
        case IF:
          Decide();
          break;
        case ESCRIBIR:
          Muestra();
          break;
        case UNKNOW:
          error();
          break;
        case PuntoComa:
          errorDOBLElinea();
          break;
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (ParseException e) {
        System.out.println(e.toString());  //imprime el mensaje de error
        //System.out.println("ESTE ES EL TOKEN ALV "+token.kind);
    error_skipto(PuntoComa, FIN, EOF);
    }
  }

  final public void Muestra() throws ParseException {
    jj_consume_token(ESCRIBIR);
                   Compilabob.pw.print("cout ");
    jj_consume_token(ParenIzq);
                                                             Compilabob.pw.print("<< ");
    Mensaje();
    jj_consume_token(ParenDer);
                                                                                                                 Compilabob.pw.print("<< endl ");
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PuntoComa:
      jj_consume_token(PuntoComa);
                                                                                                                                                                Compilabob.pw.print(";\n");
      break;
    default:
      jj_la1[7] = jj_gen;
      errorFinlinea();
    }
  }

  final public void Mensaje() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CADENAS:
    case IDENTIFICADOR:
      Concatenacion();
      break;
    default:
      jj_la1[8] = jj_gen;

    }
  }

  final public void Concatenacion() throws ParseException {
    if (jj_2_2(2)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFICADOR:
        jj_consume_token(IDENTIFICADOR);
                         Compilabob.pw.print(token.image+" ");
        break;
      case CADENAS:
        jj_consume_token(CADENAS);
                                                                          Compilabob.pw.print(token.image+" ");
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(MAS);
                                                                                                                        Compilabob.pw.print("<< ");
      Concatenacion();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CADENAS:
      case IDENTIFICADOR:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFICADOR:
          jj_consume_token(IDENTIFICADOR);
                                                                                                                                                                                        Compilabob.pw.print(token.image+" ");
          break;
        case CADENAS:
          jj_consume_token(CADENAS);
                                                                                                                                                                                                                                         Compilabob.pw.print(token.image+" ");
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

//########  DECIDE IF-ELSE ##########
  final public void Decide() throws ParseException {
    IF();
    if (jj_2_3(2)) {
      ELSE();
    } else {

    }
  }

  final public void IF() throws ParseException {
    jj_consume_token(IF);
             Compilabob.pw.print("if ");
    jj_consume_token(ParenIzq);
                                                     Compilabob.pw.print("( ");
    OpComparacion();
    jj_consume_token(ParenDer);
                                                                                                            Compilabob.pw.print(") ");
    jj_consume_token(ASIGNACION);
    jj_consume_token(SepIzq);
                                                                                                                                                              Compilabob.pw.println("{ ");
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case CicloIterado:
      case CicloLimit:
      case ESCRIBIR:
      case PuntoComa:
      case ENTERO:
      case FLOTANTE:
      case ID_CADENA:
      case BOOLEANO:
      case IDENTIFICADOR:
      case UNKNOW:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_2;
      }
      sentencias();
    }
    jj_consume_token(SepDer);
                 Compilabob.pw.println("} ");
  }

  final public void ELSE() throws ParseException {
    jj_consume_token(ELSE);
               Compilabob.pw.print("else ");
    jj_consume_token(SepIzq);
                                                        Compilabob.pw.println("{ ");
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case CicloIterado:
      case CicloLimit:
      case ESCRIBIR:
      case PuntoComa:
      case ENTERO:
      case FLOTANTE:
      case ID_CADENA:
      case BOOLEANO:
      case IDENTIFICADOR:
      case UNKNOW:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_3;
      }
      sentencias();
    }
    jj_consume_token(SepDer);
                                 Compilabob.pw.println("} ");
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PuntoComa:
      jj_consume_token(PuntoComa);
      break;
    default:
      jj_la1[14] = jj_gen;
      errorFinlinea();
    }
  }

// ############## CICLOS #############
  final public void Ciclo_RepitoHastaQue() throws ParseException {
        Token var2;
    jj_consume_token(CicloIterado);
                       Compilabob.pw.print("for ");
    jj_consume_token(ParenIzq);
                                                                Compilabob.pw.print("( ");
    var2 = jj_consume_token(IDENTIFICADOR);
                Compilabob.pw.print(token.image+" ");
                if(!ClaseSemantica.checkVariable(var2).equals("")){
                        errormsg = errormsg+ClaseSemantica.checkVariable(var2);
                        sentencias_inco++;
                }
    jj_consume_token(COMA);
                          Compilabob.pw.print("; "+var2.image+" <= ");
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFICADOR:
      var = jj_consume_token(IDENTIFICADOR);
                        Compilabob.pw.print(token.image+" ");
                        if(!ClaseSemantica.checkVariable(var).equals("")){
                                errormsg = errormsg+ClaseSemantica.checkVariable(var);
                                sentencias_inco++;
                        }
      break;
    case NUMERO:
    case NUMDECIMAL:
    case CADENAS:
    case EST_LOGIC:
      DataType();
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                        var = token;
                                        if(!(ClaseSemantica.checkAsing(var2,var).equals(" "))){
                                                errormsg = errormsg+ClaseSemantica.checkAsing(var2,var);
                                                sentencias_inco++;
                                        }
    jj_consume_token(ParenDer);
                                   Compilabob.pw.print(";"+var2.image+"++) ");
    jj_consume_token(ASIGNACION);
    jj_consume_token(SepIzq);
                 Compilabob.pw.print("{\n");
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case CicloIterado:
      case CicloLimit:
      case ESCRIBIR:
      case PuntoComa:
      case ENTERO:
      case FLOTANTE:
      case ID_CADENA:
      case BOOLEANO:
      case IDENTIFICADOR:
      case UNKNOW:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_4;
      }
      sentencias();
    }
    jj_consume_token(SepDer);
                                                                       Compilabob.pw.println("} ");
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PuntoComa:
      jj_consume_token(PuntoComa);
      break;
    default:
      jj_la1[17] = jj_gen;
      errorFinlinea();
    }
  }

  final public void Ciclo_RepitoMientras() throws ParseException {
    jj_consume_token(CicloLimit);
                     Compilabob.pw.print("do ");
    jj_consume_token(ASIGNACION);
    jj_consume_token(SepIzq);
                                                                        Compilabob.pw.print("{ ");
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case CicloIterado:
      case CicloLimit:
      case ESCRIBIR:
      case PuntoComa:
      case ENTERO:
      case FLOTANTE:
      case ID_CADENA:
      case BOOLEANO:
      case IDENTIFICADOR:
      case UNKNOW:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_5;
      }
      sentencias();
    }
    jj_consume_token(SepDer);
                 Compilabob.pw.print("} ");
    jj_consume_token(CicloWhile);
                                                          Compilabob.pw.print("while ");
    jj_consume_token(ParenIzq);
                                                                                                     Compilabob.pw.print("( ");
    OpComparacion();
    jj_consume_token(ParenDer);
                                                                                                                                                            Compilabob.pw.print(") ");
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PuntoComa:
      jj_consume_token(PuntoComa);
                                                                                                                                                                                                     Compilabob.pw.print(";\n");
      break;
    default:
      jj_la1[19] = jj_gen;
      errorFinlinea();
    }
  }

// DECLARACION DE VARIABLES 
  final public void Declaracion() throws ParseException {
        int td;
        Token varIden,t2;
    Variable_dato();
        td = token.kind;
    varIden = jj_consume_token(IDENTIFICADOR);
        Compilabob.pw.print(token.image+" ");
        if(ClaseSemantica.checkVariable(varIden).equals("")){
                errormsg = errormsg+"Error sem\u00e1ntico en la l\u00ednea " +varIden.beginLine +", columna "+varIden.beginColumn +", la variable "+ varIden.image + " ya  ha sido declarada \r\n";
                sentencias_inco++;
        }else{
                ClaseSemantica.InsertarSimbolo(varIden,td);
        }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASIGNACION:
      jj_consume_token(ASIGNACION);
                 Compilabob.pw.print("= ");
      Expresion();
        t2 = token;
        if(!(ClaseSemantica.checkAsing(varIden,t2).equals(" "))){
                errormsg = errormsg+ClaseSemantica.checkAsing(varIden,token);
                sentencias_inco++;
        }
      break;
    default:
      jj_la1[20] = jj_gen;

    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PuntoComa:
      jj_consume_token(PuntoComa);
                    Compilabob.pw.print(";\n");
      break;
    default:
      jj_la1[21] = jj_gen;
      errorFinlinea();
    }
  }

// ASIGNACION DE VALORES DESPUES DE UNA DECLARACION
/*void AsignacionD():{} 
{  
	( <LEER>{Compilabob.pw.print("cin >> "+var.image);} | Expresion() )
} */
// ASIGNACION GENERAL DE VALORES A UNA VARIABLE
  final public void Asignacion() throws ParseException {
        Token t2;
        Token varIden;
    varIden = jj_consume_token(IDENTIFICADOR);
        //Compilabob.pw.print(token.image+" ");
        if(!(ClaseSemantica.checkVariable(varIden).equals(""))){
                errormsg = errormsg+ClaseSemantica.checkVariable(varIden);
                sentencias_inco++;
                /*/CodigoIntermedio.tokensValue.remove((CodigoIntermedio.tokensValue.size()-1));*/
        }
    jj_consume_token(ASIGNACION);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEER:
      jj_consume_token(LEER);
                        lectura = true;
                        if(lectura==true)
                        Compilabob.pw.print("cin >> "+varIden.image);
                        lectura = false;
      break;
    case ParenIzq:
    case MENOS:
    case NUMERO:
    case NUMDECIMAL:
    case CADENAS:
    case EST_LOGIC:
    case IDENTIFICADOR:
                        if(lectura==false)
                        Compilabob.pw.print(varIden.image+" = ");
      Expresion();
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                t2 = token;

                if(!(ClaseSemantica.checkAsing(varIden,t2).equals(" "))){
                        errormsg = errormsg+ClaseSemantica.checkAsing(varIden,t2);
                        sentencias_inco++;
                        /*CodigoIntermedio.tokensValue.remove((CodigoIntermedio.tokensValue.size()-1));*/
                }
                if(!ClaseSemantica.checkString(varIden,opVar,t2).equals("")){
                        errormsg = errormsg+ClaseSemantica.checkString(varIden,opVar,t2);
                        sentencias_inco++;
                }
  }

//###### GRAMATICA PARA EXPRESIONES MATEMATICAS DESPUES DE UNA ASIGNACION O DECLARACION
  final public void Expresion() throws ParseException {
    Termino();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAS:
      case MENOS:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAS:
        jj_consume_token(MAS);
        break;
      case MENOS:
        jj_consume_token(MENOS);
        break;
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                   Compilabob.pw.print(token.image+" ");
      Termino();
    }
  }

// Epsilon  ---> | {}
  final public void Termino() throws ParseException {
    Factor();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIV:
      case MODULO:
      case MULTI:
        ;
        break;
      default:
        jj_la1[25] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTI:
        jj_consume_token(MULTI);
        break;
      case DIV:
        jj_consume_token(DIV);
        break;
      case MODULO:
        jj_consume_token(MODULO);
        break;
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                           Compilabob.pw.print(token.image+" ");
      Factor();
    }
  }

  final public void Factor() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MENOS:
      jj_consume_token(MENOS);
                 Compilabob.pw.print("-");
      Factor();
      break;
    case ParenIzq:
    case NUMERO:
    case NUMDECIMAL:
    case CADENAS:
    case EST_LOGIC:
    case IDENTIFICADOR:
      Primario();
      break;
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Primario() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ParenIzq:
      jj_consume_token(ParenIzq);
                     Compilabob.pw.print("( ");
      Expresion();
      jj_consume_token(ParenDer);
                                                                               Compilabob.pw.print(") ");
      break;
    case NUMERO:
    case NUMDECIMAL:
    case CADENAS:
    case EST_LOGIC:
      DataType();
      break;
    case IDENTIFICADOR:
      jj_consume_token(IDENTIFICADOR);
                                                                                                                                             Compilabob.pw.print(" "+token.image);
      break;
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// ############## OPERACIONES DE COMPARACION PARA IF O CICLOS  ####################
  final public void OpComparacion() throws ParseException {
        Token var3;
    ExpresionL();
                             var3 = token;
    Comparadores();
    ExpresionL();
